// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fighter renders with fighter 1`] = `
<div
  className="ui segment"
>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <div
        className="extra"
      >
        <div
          className="ui left floated header"
        >
          NaN
        </div>
      </div>
      <div
        className="header sc-EHOje hPnmzI"
      >
        Fighter
      </div>
      <div
        className="extra sc-ifAKCX fCitBk"
        position={1}
      >
        <div>
          <div
            className="extra sc-bdVaJa cdKNHG"
          >
            <i
              aria-hidden="true"
              className="red heart outline big icon sc-bwzfXH gNTOrh"
            />
            <div
              className="sc-htpNat cByMRF"
              color="red"
            >
              0
            </div>
          </div>
        </div>
      </div>
      <div
        className="extra sc-ifAKCX gxUpRL"
        position={0}
      >
        <div>
          <div
            className="extra sc-bdVaJa cdKNHG"
          >
            <i
              aria-hidden="true"
              className="grey shield big icon sc-bwzfXH gNTOrh"
            />
            <div
              className="sc-htpNat iZbbcA"
              color="grey"
            >
              0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Fighter renders with no props 1`] = `
<div
  className="ui segment"
>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <div
        className="extra"
      >
        <div
          className="ui left floated header"
        />
      </div>
      <div
        className="header sc-EHOje hPnmzI"
      />
    </div>
  </div>
</div>
`;
